Chat functionality with sockets (unprotected)

--- a/client-app/index.html
+++ b/client-app/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+        var global = window;
+    </script>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
     <link rel="icon" type="image/png" href="/icon.png" />
